@@ -9,13 +9,9 @@ This is a list of some things to do:
 
 21) SilverLink drivers don't install on Vista2
 
-22) some apps can't be deleted. Why? Maybe I should forbid erasing apps...
-
 23) TiLP used as a normal user
 
 24) user boxes should be showed at center
-26) ROM dumping should display a box when ready
-
 
 //------
 
