@@ -578,12 +578,13 @@ down to ROMDUMP, ENTER,<br>
 - TI84+ USB : </font><font size="3">PRGM, EXEC, ROMDUMP<br>
 - Titanium USB : romdump(), ENTER<br>
 <br>
-USB users: Silver/DirectLink cables do not like timeouts. To avoid
-this, type commands in advance so that you just have to quickly type
-ENTER when the dumper waits for you.<br>
+<span style="font-style: italic;">Note:</span> Silver/DirectLink cables
+do not like timeouts. To avoid
+this, TiLP-2 will display a dialog box so that you will have the time
+to enter the needed commands.<br>
 <br>
 <span style="font-style: italic;">Note:</span> TI84+/USB does not have
-ROM dumper.<br>
+ROM dumper ???<br>
 </font>
 <blockquote> </blockquote>
 <h2>5.7 ID-LIST</h2>
